<resources>
    <string name="app_name">SwamsterAS</string>
    <string name="AdminButton">Administrator</string>
    <string name="SwimmerCoachButton">Swimmer/Coach</string>
    <string name="WelcomeText">SWAMSTER: The Swim Meet Master</string>
    <color name="front">#008080</color>
    <color name="buttoncolor">#33cccc</color>
    <string name="enterSwimId">Enter Swimmmer Id Number</string>
    <string name="MeetAsk">Select your meet:</string>
    <string name="AgeAsk">Select your age:</string>
    <string name="TeamAsk">Select your team:</string>
    <string name="LastNameAsk">Enter your last name:</string>
    <string name="FirstNameAsk">Enter your first name:</string>
    <string name="firstNameAns" />
    <string name="lastNameAns" />
    <string name="agree">I Agree</string>
    <string name="agreement">Terms and Agreements:</string>
    <string name="actualAgree">By continuing, you are agreeing that you are a part of administration. Altering swim times and other information is an offense and has consequences.</string>
    <string name="finish">Finish</string>
    <string name="coachTeamAsk">Select Your Team:</string>
    <string name="iAmASwimmer">I am a Swimmer</string>
    <string name="iAmACoach">I am a Coach</string>
    <string-array name="meets">
        <item>Mams</item>
        <item>Auburn</item>
        <item>Westboro</item>
        <item>Grafton</item>
    </string-array>
    <string-array name="teams">
        <item>17</item>
        <item>20</item>
        <item>1</item>
        <item>4</item>
    </string-array>
    <string-array name="ages">
        <item>10 and Under</item>
        <item>11-12</item>
        <item>13-14</item>
        <item>15 and Older</item>
    </string-array>
</resources>