<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shreya.swamsteras.MainActivity">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="310dp">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/WelcomeText"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="visible"
                tools:layout_editor_absoluteX="79dp"
                tools:layout_editor_absoluteY="89dp" />

            <LinearLayout
                android:id="@+id/Choice Buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/adminChoiceButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/AdminButton"
                    tools:layout_editor_absoluteX="27dp"
                    tools:layout_editor_absoluteY="145dp" />

                <Button
                    android:id="@+id/swimmerChoiceButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/SwimmerCoachButton"
                    tools:layout_editor_absoluteX="208dp"
                    tools:layout_editor_absoluteY="145dp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
